# risc-v-cpu

./: .gitignore  .gitmodules  BringUpMakefile  CMakeLists.txt  LICENSE  README.md  SimMakeFile
de1-soc/: .gitignore  README.md  config.svh  coremark.mif  coremark_zmmul.mif  dual_port_ram.qip  dual_port_ram.v  dual_port_ram_bb.v  dual_port_ram_inst.v  helloworld.mif  pll.bsf  pll.cmp  pll.qip  pll.v  risc-v-de1.qpf  rtos_example.mif  shell.mif  stp1.stp  top.qsf  top.sdc  top.sv
de1-soc/pll/: pll_0002.v
de1-soc/pll_sim/: pll.vo
de1-soc/pll_sim/aldec/: rivierapro_setup.tcl
de1-soc/pll_sim/cadence/: ncsim_setup.sh
de1-soc/pll_sim/mentor/: msim_setup.tcl
de1-soc/pll_sim/synopsys/vcs/: vcs_setup.sh
de1-soc/pll_sim/synopsys/vcsmx/: vcsmx_setup.sh
doc/: coverage_results.xml  dv_doc.md  technical_specification.md
dv/: cpu_agent.hpp  cpu_coverage_subscriber.hpp  cpu_covergroup.hpp  cpu_driver.hpp  cpu_env.hpp  cpu_if.hpp  cpu_monitor.hpp  cpu_scenario_item.hpp  cpu_scoreboard.hpp  cpu_seq_item.hpp  cpu_sequence.hpp  cpu_sequencer.hpp  cpu_util.cpp  cpu_util.hpp  sc_main.cpp  test.hpp
dv/cpu/: README.md  cpu_covergroup.hpp  cpu_driver.hpp  cpu_if.hpp  cpu_scenario_item.hpp  cpu_scoreboard.hpp  cpu_seq_item.hpp  cpu_seq_lib.hpp  cpu_sequencer.hpp  cpu_util.cpp  cpu_util.hpp  sc_main.cpp  test_lib.hpp
dv/mul/: Makefile  mul_tb.sv
rtl/: address_decoder.sv  bringup_top.sv  config.svh  cpu.sv  cpu.svh  dual_port_ram.sv  mock_uart_rx.sv  mock_uart_tx.sv  mul.sv  rv32ui-p-add.data  sim_top.sv  top.sv  uart.sv  uart_fifo.sv  uart_rx.sv  uart_tx.sv
sim/: Makefile  README.md  uart_terminal.cpp
src/: Makefile  README.md  create_mif  helloworld.c  util.c  util.h
src/coremark/: Makefile  boot.s  core_portme.c  core_portme.h  coremark.ld  ee_printf.c
src/freertos/: FreeRTOSConfig.h  Makefile  boot.S  external_interrupt_handler.c  external_interrupt_handler.h  freertos_risc_v_chip_specific_extensions.h  link.ld  main.c  portASM.S
src/helloworld/: Makefile  boot.s  helloworld.c  link.ld
src/shell/: Makefile  shell.c
